# social-network-api

./: .gitignore  README.md  docker-compose.yml
k6_load_tests/: post_create.js  post_get_all.js
social-backend/: Dockerfile  pyproject.toml
social-backend/backend/: .coveragerc  .env.sample  behave.ini  pytest.ini  uwsgi.ini
social-backend/backend/api/: models.py  paginators.py  serializers.py  tests.py  urls.py  views.py
social-backend/backend/api/management/commands/: initadmin.py
social-backend/backend/api/migrations/: 0001_initial.py
social-backend/backend/api/serpy/: fields.py
social-backend/backend/api/views/like/: serializers.py  views.py
social-backend/backend/api/views/post/: serializers.py  views.py
social-backend/backend/api/views/user/: serializers.py  views.py
social-backend/backend/backend/: middlewares.py  settings.py  urls.py
social-backend/backend/backend/bdd_tests/: bdd_utils.py  environment.py  like.feature  posts.feature  user.feature
social-backend/backend/backend/features/: login.feature
